updated body margin

--- a/style.css
+++ b/style.css
@@ -2,10 +2,25 @@ Body{
   background-color: #f2ebd8;
   color: #302e29;
   font-family: "Times"; Times New Roman;
+  margin: 2px
   }
+h1 {
+  
+  }
+
+p{
+
+  }
+
+h2{
+  
+  }
+
+h3{
+  
+  }
+
 h4 {
   font-style:  italic;
   }
-p{
-padding: 3px;
-  }
+
