--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
   }
 
 p{
-
+  margin: 0.5px;
   }
 
 h2{
@@ -17,10 +17,11 @@ h2{
   }
 
 h3{
-  
+  margin: 1px;
   }
 
 h4 {
   font-style:  italic;
+  margin: 1px;
   }
 
