--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
   }
 
 p{
-  margin: 0.5px;
+  margin: 0px;
   }
 
 h2{
@@ -18,10 +18,12 @@ h2{
 
 h3{
   margin: 1px;
+  margin-bottom: 0.25px;
   }
 
 h4 {
   font-style:  italic;
   margin: 1px;
+  margin-top:  0.25px;
   }
 
