--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ Body{
   background-color: #f2ebd8;
   color: #302e29;
   font-family: "Times"; Times New Roman;
-  margin: 2px
+  margin: 2px;
+  text-indent: 10%
   }
 h1 {
   
